feat: add countries component

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,7 +1,8 @@
 .form_container {
-  width: 100%;
+  width: 90%;
   margin-left: 4rem;
   margin-right: 3rem;
+  padding-top: 2rem;
 }
 
 .search_form {
