--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@
 }
 
 a {
-  color: inherit; /* blue colors for links too */
-  text-decoration: inherit; /* no underline */
+  color: inherit;
+  text-decoration: inherit;
 }
