--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,5 +1,7 @@
+@import '/src/styles/variables';
+
 .navbar {
-  background: #141414;
+  background: $background;
   height: 80px;
   display: flex;
   justify-content: flex-start;
@@ -11,7 +13,7 @@
 }
 
 .navbar_logo {
-  color: white;
+  color: $white;
   font-weight: 400;
   font-size: 1.5rem;
 }
@@ -34,12 +36,12 @@
 }
 
 .active {
-  color: #00d8ff;
+  color: $ligth-blue;
   text-decoration: underline;
 }
 
 .nav-links:hover {
-  color: #00d8ff;
+  color: $ligth-blue;
 }
 
 .navbar_logo {
