--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@
   background: #141414;
   height: 80px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   padding-left: 3rem;
@@ -49,4 +49,12 @@
   justify-content: flex-end;
   flex-direction: row-reverse;
   gap: 1.5rem;
+}
+
+.navbar_current-page {
+  width: 30%;
+  color: white;
+  font-weight: 400;
+  font-size: 1.5rem;
+  text-align: right;
 }
