feat: add radio input component

--- a/src/components/Forms/ErrorMessage/ErrorMessage.module.scss
+++ b/src/components/Forms/ErrorMessage/ErrorMessage.module.scss
@@ -2,8 +2,11 @@
 
 .error_title {
   color: transparent;
-  height: 1.2rem;
+  height: 1rem;
   transition: all 0.3 ease-in;
+  width: 20rem;
+  font-size: 0.8rem;
+  font-style: italic;
 }
 
 .error_active {
