--- a/src/components/Forms/Inputs/Input.module.scss
+++ b/src/components/Forms/Inputs/Input.module.scss
@@ -32,7 +32,7 @@
 }
 
 .input_file {
-  padding: 0.8rem;
+  padding: 0.3rem;
 
   @extend %input;
   &::-webkit-file-upload-button {
@@ -144,4 +144,15 @@ $secondColor: #0fa800;
 .radio_container {
   display: flex;
   gap: 2rem;
+}
+
+.error {
+  border: 1px solid transparent;
+  box-shadow: 0 0 0 1px red;
+}
+
+.input_select {
+  @extend %input;
+  padding: 0;
+  padding-left: 1rem;
 }
