--- a/src/components/Forms/Inputs/Input.module.scss
+++ b/src/components/Forms/Inputs/Input.module.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   gap: 0.5rem;
 
   &:first-child {
@@ -37,6 +37,7 @@
 
 .input_file {
   padding: 0.3rem;
+  cursor: pointer;
 
   @extend %input;
   &::-webkit-file-upload-button {
@@ -46,8 +47,6 @@
     text-align: left;
   }
 }
-$firstColor: #014862;
-$secondColor: #0fa800;
 
 .input_radio {
   display: none;
@@ -157,6 +156,7 @@ $secondColor: #0fa800;
 
 .input_select {
   @extend %input;
+  cursor: pointer;
   padding: 0;
   padding-left: 1rem;
 }
