feat: add tests

--- a/src/components/Forms/Button/Button.module.scss
+++ b/src/components/Forms/Button/Button.module.scss
@@ -10,6 +10,7 @@
   padding: 1rem;
   font-size: 1rem;
   background-color: #00d9ff9a;
+  margin-bottom: 1rem;
 
   &:disabled {
     background-color: cadetblue;
