fix: edit style in  components

--- a/src/pages/Pages.module.scss
+++ b/src/pages/Pages.module.scss
@@ -21,7 +21,7 @@
 .form_page {
   height: 100%;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
   justify-content: flex-start;
   h2 {
     padding-left: 3rem;
