--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,6 +2,8 @@ $white: #fff;
 $black: #000;
 $blue: #00d9ff9a;
 $ligth-blue: #00d8ff;
+$dark-blue: #5f9ea0;
 $background: #141414;
 $firstColor: #014862;
 $secondColor: #0fa800;
+$white-50: #ffffff80;
