--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,19 +1,5 @@
 @import '/src/styles/colors';
 
-@mixin input($border-color, $box-shadow) {
-  width: 30rem;
-  height: 3rem;
-  padding: 1rem;
-  outline: none;
-  border: 1px solid $border-color;
-  border-radius: 5px;
-
-  &:focus {
-    border: 1px solid transparent;
-    box-shadow: 0 0 0 1px $box-shadow;
-  }
-}
-
 %pd-container {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -56,5 +42,24 @@
   &:hover {
     scale: 1.09;
     transition: all 0.2s ease-in;
+  }
+}
+
+%button {
+  margin-top: 1rem;
+  text-align: center;
+  width: 10rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #141414;
+  padding: 1rem;
+  font-size: 1rem;
+  background-color: $blue;
+  margin-bottom: 1rem;
+
+  &:disabled {
+    background-color: $dark-blue;
   }
 }
