feat: error handing on main

--- a/src/pages/Pages.module.scss
+++ b/src/pages/Pages.module.scss
@@ -29,3 +29,17 @@
     margin-top: 1rem;
   }
 }
+
+.home {
+  .error_title {
+    width: 100%;
+    display: block;
+    font-size: 1.5rem;
+    color: black;
+    font-style: normal;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    height: auto;
+    text-align: center;
+  }
+}
