--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -32,7 +32,7 @@
 .loading .circle:before {
   content: '';
   position: absolute;
-  background: $white;
+  background: $backg-default;
   width: 50px;
   height: 50px;
   animation-name: beesandbombscirclebox;
@@ -65,7 +65,7 @@
   position: absolute;
   width: 120px;
   height: 120px;
-  background: $white;
+  background: $backg-default;
   top: 50%;
   left: 50%;
   z-index: 1;
