--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,6 +1,4 @@
 .flag_container {
-  padding-left: 4rem;
-  padding-right: 4rem;
   display: flex;
   gap: 1rem;
   overflow: hidden;
@@ -8,6 +6,6 @@
 }
 
 .countries_title {
-  padding-left: 4rem;
-  padding-right: 4rem;
+  // padding-left: 4rem;
+  // padding-right: 4rem;
 }
