--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,7 +1,7 @@
 $white: #fff;
 $black: #000;
 $blue: #00d9ff9a;
-$ligth-blue: #00d8ff;
+$light-blue: #00d8ff;
 $dark-blue: #5f9ea0;
 $background: #141414;
 $firstColor: #014862;
