--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/variables';
+
 .form_container {
   width: 99%;
   margin-left: 2rem;
@@ -19,6 +21,8 @@
   outline: none;
   border: 2px solid #141414;
   border-radius: 5px;
+  background: $color-input-bg;
+  color: $color-btn-text;
 }
 
 .search__input :focus {
