--- a/src/components/Animes/AnimeData/AnimeData.module.scss
+++ b/src/components/Animes/AnimeData/AnimeData.module.scss
@@ -1,3 +1,62 @@
+@import '/src/styles/variables';
+
 .anime_data_cnt {
   display: flex;
+  @media (max-width: 700px) {
+    flex-direction: column;
+  }
+}
+
+.left_side {
+  display: flex;
+  padding: 1.3rem;
+
+  @media (max-width: 1040px) {
+    padding: 1rem;
+  }
+  @media (max-width: 700px) {
+    justify-content: center;
+  }
+}
+
+.img_cnt {
+  width: 18rem;
+  height: 28rem;
+
+  .img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  @media (max-width: 1040px) {
+    width: 15rem;
+    height: 20rem;
+  }
+}
+
+.right_side {
+  padding: 1.3rem;
+
+  h3 {
+    margin-bottom: 1rem;
+  }
+  .b-text_with_paragraphs {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+
+    a {
+      text-decoration: underline;
+      color: $dark-blue;
+    }
+  }
+
+  p {
+    font-size: 0.9rem;
+    padding-bottom: 0.4rem;
+
+    span {
+      font-weight: bold;
+    }
+  }
 }
