--- a/src/components/Animes/AnimeItem/AnimeItem.module.scss
+++ b/src/components/Animes/AnimeItem/AnimeItem.module.scss
@@ -1,6 +1,7 @@
 @import '/src/styles/variables';
 .country_item {
   @extend %item;
+  cursor: pointer;
 }
 
 .img {
@@ -10,7 +11,6 @@
 
 .item_name {
   text-align: center;
-  margin-bottom: 1rem;
   margin-top: 0.4rem;
   width: 18rem;
   hyphens: auto;
@@ -19,7 +19,17 @@
   -ms-hyphens: auto;
   color: $color-btn-text;
   font-weight: 300;
+  margin-bottom: 1rem;
 }
+// .item_name_ru {
+//   width: 18rem;
+//   hyphens: auto;
+//   margin: 0;
+//   margin-bottom: 1rem;
+//   color: $color-btn-text;
+//   text-align: center;
+//   font-size: 1rem;
+// }
 
 .item_data {
   margin-bottom: 0.2rem;
