--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,12 +1,13 @@
 @import '/src/styles/variables';
 
-.shadow_ovelay {
+.shadow_overlay {
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.374);
+  background-color: rgba(0, 0, 0, 0.581);
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+  z-index: 99;
 }
 
 .modal_container {
@@ -22,6 +23,7 @@
   margin: 1.75rem auto;
   transition: transform 0.3s ease-out;
   overflow: hidden;
+  z-index: 100;
 }
 
 .modal_wrapper {
@@ -45,4 +47,20 @@
     text-align: center;
     font-size: 1rem;
   }
+}
+
+.btn_close {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  padding: 0.25em 0.25em;
+  color: #000;
+  background: transparent url('../../assets/icon/close.svg') center/1em auto no-repeat;
+  border: 0;
+  border-radius: 0.25rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 2;
+  cursor: pointer;
 }
