--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -1,3 +1,19 @@
-.form_container {
-  // margin-top: 2rem;
+.form_wrapper_date {
+  display: flex;
+  gap: 1.5rem;
+
+  input,
+  label,
+  span {
+    width: 10rem;
+  }
+
+  span {
+    margin-top: 0.3rem;
+    height: 2rem;
+  }
+
+  .input_file {
+    height: 2.2rem;
+  }
 }
