--- a/src/components/Forms/Inputs/Input.module.scss
+++ b/src/components/Forms/Inputs/Input.module.scss
@@ -1,5 +1,37 @@
 @import '/src/styles/variables';
 
+.item_input {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.1rem;
+  gap: 0.1rem;
+}
+
+.item_check {
+  span {
+    margin-top: 0.5rem;
+  }
+}
+
+.input_colum {
+  height: 2rem;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+
+  .input_title {
+    padding-top: 5px;
+    width: 7rem;
+    font-weight: normal;
+  }
+
+  span {
+    padding-top: 5px;
+    width: 15rem;
+  }
+}
+
 .input_text {
   @extend %input;
 }
@@ -9,30 +41,16 @@
 }
 
 .input_title {
-  font-weight: bold;
-  font-size: 1.17rem;
+  padding-left: 0.2rem;
+  font-size: 0.9rem;
   color: $color-btn-text;
 }
 
-.item_input {
-  display: flex;
-  flex-direction: column;
-  margin-top: 0.1rem;
-  gap: 0.1rem;
-
-  &:first-child {
-    margin-top: 2rem;
-  }
-}
-
-.error_title {
-  color: transparent;
-  height: 1.2rem;
-  transition: all 0.3 ease-in;
-}
-
-.error_active {
-  color: red;
+.input_select {
+  @extend %input;
+  cursor: pointer;
+  padding: 0;
+  padding-left: 1rem;
 }
 
 .input_file {
@@ -93,12 +111,13 @@
       width: 30px;
       height: 30px;
       border-radius: 25px;
-      background: $firstColor;
+      background: $color-input-bg;
       box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.3) inset;
       transition: ease-in 0.15s;
     }
   }
 }
+
 .input_check {
   display: none;
   &:checked + label {
@@ -140,7 +159,7 @@
       width: 55px;
       height: 30px;
       border-radius: 25px;
-      background: $firstColor;
+      background: $color-input-bg;
       box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.3) inset;
       transition: ease-in 0.15s;
     }
@@ -157,9 +176,14 @@
   box-shadow: 0 0 0 1px red;
 }
 
-.input_select {
-  @extend %input;
-  cursor: pointer;
-  padding: 0;
-  padding-left: 1rem;
+.error_title {
+  display: flex;
+  align-items: center;
+  color: transparent;
+  height: 1.2rem;
+  transition: all 0.3 ease-in;
+}
+
+.error_active {
+  color: red;
 }
