--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -12,6 +12,10 @@
   gap: 4rem;
   font-family: Gang-of-Three;
   font-weight: 200;
+  @media (max-width: 700px) {
+    padding: 0 1rem;
+    gap: 1.6rem;
+  }
 }
 
 .navbar_logo {
@@ -26,6 +30,10 @@
 
   span {
     color: red;
+  }
+
+  @media (max-width: 700px) {
+    font-size: 1rem;
   }
 }
 
@@ -50,6 +58,11 @@
       text-transform: uppercase;
       // font-family: Gang-of-Three;
     }
+  }
+
+  @media (max-width: 700px) {
+    font-size: 0.8rem;
+    gap: 1rem;
   }
 }
 
