--- a/src/pages/Pages.module.scss
+++ b/src/pages/Pages.module.scss
@@ -21,14 +21,15 @@ body {
   justify-content: flex-start;
   gap: 3rem;
 
-  h2 {
-    font-size: 1.5rem;
-    color: $color-default;
-    margin-top: 1rem;
-  }
-
   .form_page_cnt {
     margin-top: 1rem;
+
+    h2 {
+      font-size: 1.5rem;
+      color: $color-default;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
+    }
   }
 }
 
